<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="themeofMessage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="myEmail">janosik33@ya.ru</string>
    <string name="shareMessage">"https://practicum.yandex.ru/profile/android-developer/"</string>
    <string name="input_hint">Поиск</string>
    <string name="urlOfferta">"https://yandex.ru/legal/practicum_offer/"</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_internet_connection">Проблемы со связью</string>
    <string name="no_internet_connection_extra">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="Searched">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="progress_playing_placeholder">0:30</string>
    <string name="content_description_arrow_back">Стрелка возврата</string>
    <string name="content_description_cover">Обложка трека</string>
    <string name="content_description_share_icon">поделиться</string>
    <string name="content_description_menu_icon">меню плейлиста</string>
    <string name="content_description_add_media_btn">Кнопка добавления трека в плейлист</string>
    <string name="content_description_play_btn">кнопка проигрывания/паузы</string>
    <string name="content_description_like_btn">кнопка добавления в избранное</string>
    <string name="content_description_clear_btn">кнопка очистки поиска</string>
    <string name="content_description_bad_request">изображение некорректного запроса поиска</string>
    <string name="zero">00:00</string>
    <string name="check_internet_connection">Проверьте подключение к интернету</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="favorits_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_playlists_placeholder_message">Вы не создали\nни одного плейлиста</string>
    <string name="empty_favorite_tracks_placeholder_message">Ваша медиатека пуста</string>
    <string name="empty_playlist_tracks_placeholder_message">Вы не добавили ни одного трека</string>
    <string name="empty_tracks_playlist_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="title_playlistsCreator">Название*</string>
    <string name="description_playlistsCreator">Описание</string>
    <string name="create_playlistCreator">Создать</string>
    <string name="redactor_playlist_save">Сохранить</string>
    <string name="confirm_ending_playlist_creating">Завершить создание плейлиста?</string>
    <string name="confirm_delete_track">Хотите удалить трек?</string>
    <string name="confirm_ending_playlist_creating_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_negative_btn">Отмена</string>
    <string name="dialog_deleting_negative">Нет</string>
    <string name="dialog_deleting_positive">Да</string>
    <string name="dialog_positive_btn">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="redacting_playlist_header">Редактировать</string>
    <string name="track_already_added">"Трек уже был добавлен в плейлист %1$s ранее"</string>
    <string name="track_added_successfully">Трек успешно добавлен в плейлист %1$s</string>
    <string name="permission_needs_rationale">Разрешение на чтение хранилища необходимо для доступа к изображениям</string>
    <string name="playlist_created">"Плейлист %1$s создан"</string>
    <string name="playlist_delete_dialog">Хотите удалить плейлист  %1$s </string>
    <string name="zero_tracks">0 треков</string>
    <string name="zero_minutes">0 минут</string>
    <string name="share_playlist">Поделиться</string>
    <string name="playlist_redactor">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="content_description_forward_icon">forward_icon</string>
    <plurals name="count_of_tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="ending_of_minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>


</resources>