<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment" >


        <TextView
            style="@style/header_style"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin ="@dimen/header_margin"
            android:text="@string/settings" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical">


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            style="@style/switchStyle"
            android:text="@string/dark_theme"
            android:textColor="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/share"
            style="@style/SettingsMenuStyle"
            android:text="@string/share"
            app:drawableEndCompat="@drawable/share" />


        <TextView
            android:id="@+id/support"
            style="@style/SettingsMenuStyle"
            android:text="@string/support"
            app:drawableEndCompat="@drawable/sup" />

        <TextView
            android:id="@+id/terms"
            style="@style/SettingsMenuStyle"
            android:text="@string/agreement"
            app:drawableEndCompat="@drawable/terms"
            />
    </LinearLayout>

</LinearLayout>

