<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="4dp"
        android:background="?attr/colorPrimary"
        android:paddingStart="12dp"
        android:paddingTop="9dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/titel_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="14dp"
        android:background="?attr/colorPrimary"
        android:orientation="vertical">

        <Button
            android:id="@+id/search"
            style="@style/ButtonStyle"
            android:text="@string/search"
            app:cornerRadius="16dp"
            app:icon="@drawable/light_mode"
            app:iconGravity="textStart"
            app:iconPadding="6dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/media"
            style="@style/ButtonStyle"
            android:text="@string/media"
            app:cornerRadius="16dp"
            app:icon="@drawable/note"
            app:iconGravity="textStart"
            app:iconPadding="6dp"
            app:iconTint="@color/black" />

        <Button
            android:id="@+id/settings"
            style="@style/ButtonStyle"
            android:text="@string/settings"
            app:cornerRadius="16dp"
            app:icon="@drawable/group"
            app:iconGravity="textStart"
            app:iconPadding="6dp"
            app:iconTint="@color/black" />
    </LinearLayout>

</LinearLayout>

