<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context=".ui.search.SearchFragment">


        <TextView
            style="@style/header_style"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin ="@dimen/header_margin"
            android:text="@string/search" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputEditText"
            style="@style/inputSearchEditStyle"
            android:background="@drawable/round_corner_edit_text"
            android:backgroundTint="?attr/colorOnSecondary"
            android:drawableStart="@drawable/light_mode"
            android:drawablePadding="10dp"
            android:hint="@string/input_hint"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textIsSelectable="true"
            android:theme="@style/MyTheme"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/round_corner_edit_text"
            android:contentDescription="@string/content_description_clear_btn"
            android:src="@drawable/clear"
            android:visibility="gone" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/progress_bar_marginTop"
                android:indeterminateTint="@color/YP_blue"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_searched"
                style="@style/SettingsMenuStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/Searched"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_size_20sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="7"
                tools:listitem="@layout/item_track" />

            <Button
                android:id="@+id/b_clear_history_btn"
                style="@style/clear_history_and_new_playlist_btn"
                android:layout_marginVertical="16dp"
                android:text="@string/clearHistory"
                android:visibility="gone"
                app:cornerRadius="@dimen/button_search_activity_corners" />

            <LinearLayout
                android:id="@+id/placeholder"
                style="@style/placeholder"
                android:layout_marginTop="120dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_placeholderImage"
                    style="@style/placeholder_image"
                    android:contentDescription="@string/content_description_bad_request"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_placeholderMessage"
                    style="@style/placeholder_message"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/text_size_20sp" />

                <TextView
                    android:id="@+id/tv_placeholderMessageExtra"
                    style="@style/placeholder_message"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/text_size_20sp" />

                <Button
                    android:id="@+id/b_placeholder_update_btn"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:backgroundTint="?attr/colorOnPrimary"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/update"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="@dimen/text_size_14sp"
                    app:cornerRadius="@dimen/button_search_activity_corners" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>